# ROS

./: .gitignore  README.md  start.sh
install/: local_setup.sh  setup.sh
install/my_msgs/include/my_msgs/my_msgs/msg/: msg1.h
install/my_msgs/include/my_msgs/my_msgs/msg/detail/: msg1__builder.hpp  msg1__functions.c  msg1__rosidl_typesupport_fastrtps_c.h  msg1__rosidl_typesupport_fastrtps_cpp.hpp  msg1__rosidl_typesupport_introspection_c.h  msg1__struct.h  msg1__struct.hpp  msg1__traits.hpp  msg1__type_support.h  msg1__type_support.hpp
install/my_msgs/local/lib/python3.10/dist-packages/my_msgs-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/my_msgs/local/lib/python3.10/dist-packages/my_msgs/msg/: _msg1.py  _msg1_s.c
install/my_msgs/share/ament_index/resource_index/rosidl_interfaces/: my_msgs
install/my_msgs/share/my_msgs/: package.dsv  package.ps1  package.sh
install/my_msgs/share/my_msgs/cmake/: export_my_msgs__rosidl_generator_cExport.cmake  export_my_msgs__rosidl_typesupport_fastrtps_cExport.cmake  my_msgs__rosidl_typesupport_cppExport-noconfig.cmake  my_msgs__rosidl_typesupport_cppExport.cmake  my_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake
install/my_msgs/share/my_msgs/msg/: Msg1.idl
install/project1/include/project1/project1/msg/: msg1.h  msg1.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/project1/include/project1/project1/msg/detail/: msg1__functions.c  msg1__functions.h  msg1__rosidl_typesupport_fastrtps_c.h  msg1__rosidl_typesupport_introspection_c.h  msg1__rosidl_typesupport_introspection_cpp.hpp  msg1__struct.hpp  msg1__type_support.cpp  msg1__type_support.h  msg1__type_support.hpp
install/project1/lib/project1/: listener1_node  listener_node  talker1_node
install/project1/local/lib/python3.10/dist-packages/project1/: _project1_s.ep.rosidl_typesupport_c.c
install/project1/local/lib/python3.10/dist-packages/project1/msg/: _msg1.py
install/project1/share/ament_index/resource_index/package_run_dependencies/: project1
install/project1/share/ament_index/resource_index/parent_prefix_path/: project1
install/project1/share/project1/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/project1/share/project1/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_project1__rosidl_generator_cExport.cmake  export_project1__rosidl_generator_pyExport-noconfig.cmake  project1__rosidl_typesupport_cExport.cmake  project1__rosidl_typesupport_cppExport-noconfig.cmake  project1__rosidl_typesupport_introspection_cExport-noconfig.cmake  project1__rosidl_typesupport_introspection_cppExport-noconfig.cmake  project1__rosidl_typesupport_introspection_cppExport.cmake
install/project1/share/project1/msg/: Msg1.idl
launch_off/: game_launch.py
log/: latest_build
src/core/: CMakeLists.txt
src/core/src/: core.cpp
src/image/: CMakeLists.txt
src/image/src/: image.cpp
src/model/: CMakeLists.txt  model.cpp  package.xml
src/model/include/: kalman_filter.cpp  kalman_filter.hpp  light.cpp  light.hpp  yolo.cpp  yolo.hpp
src/model/resource/: vircar1.webm
src/move/: CMakeLists.txt  package.xml
src/move/src/: move.cpp
src/my_msgs/: CMakeLists.txt  package.xml
src/my_msgs/msg/: Msg1.msg  SendData.msg
src/project1/: CMakeLists.txt  package.xml
src/project1/install/: local_setup.sh  setup.sh
src/project1/install/project1/lib/project1/: listener_node  talker1_node
src/project1/install/project1/share/ament_index/resource_index/package_run_dependencies/: project1
src/project1/install/project1/share/ament_index/resource_index/parent_prefix_path/: project1
src/project1/install/project1/share/project1/: package.dsv  package.sh
src/project1/install/project1/share/project1/cmake/: ament_cmake_export_include_directories-extras.cmake  project1Config.cmake
src/project1/log/: latest_build  latest_list
src/project1/src/: listener1.cpp  talker1.cpp  talker1.md
src/shoot/: CMakeLists.txt  package.xml
src/shoot/src/: shoot.cpp  shoot_handle.cpp
tdt_interface/: CMakeLists.txt  package.xml
tdt_interface/msg/: ReceiveData.msg
